<?xml version="1.0" encoding="utf-8"?>
<resources>


    
    <string name="app_name">Arthashastra</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="Basic_lit">Beginner</string>
    <string name="score_text">Score: </string>
    <string name="medium_lit">Novice</string>
    <string name="advanced_user">Advanced</string>
    <string name="tortoise_buffets">Tortoise Buffett</string>
    <string name="more_about_tortoise_buffet"> This is a story that introduces the very \nbasics of financial literacy and puts a \nnew twist on an age old children\'s tale</string>
    <string name="intro_int">Introduction to interest</string>
    <string name="intro_int_more_info">Explains what Interest is</string>
    <string name="int_part_2">Interest Part 2</string>
    <string name="more_info_abt_int2">More on simple and \ncompound interest</string>
    <string name="rule_72">The Rule of 72</string>
    <string name="more_info_72">A rule to find how long it takes \n money to double</string>
    <string name="one_id">One Idiot</string>
    <string name="one_id_more_info"> A great movie by the IDFC Foundation\ndirected by Amole Gupta. Deals with\nfrugality and the need for financial literacy </string>
    <string name="frugal_guide">A Guide to being Frugal</string>
    <string name="frugal_guide_more_info">A small guide by well known\nblogger Leo Babauta</string>
    <string name="cash_acc">Cash Accounting</string>
    <string name="accrual_cash">Accrual Basis of Accounting</string>
    <string name="comparing_2_acc">Comparing 2 types of Accounting</string>
    <string name="bal_sheet_income_text">Balance Sheet &amp; Income Statement relation</string>
    <string name="basic_cash_flow">Basic Cash Flow Statement</string>
    <string name="acc_payable">Accounts Payable</string>
    <string name="more_info_abt_accrual_acc">Simple example of accrual \naccounting</string>
    <string name="more_info_about_cash_acc">Simple example of cash \naccounting</string>
    <string name="more_info_abt_cash_vs_accrual">Comparing accrual and \ncash accounting</string>
    <string name="more_info_about_bal_sheet_text">Relation between balance \nsheet and income statement</string>
    <string name="more_info_about_basic_cash_flow">Using a the statement to reconcile net income with \nchange in cash</string>
    <string name="more_info_about_intro_to_accounts_payable">Doing an example with accounts \npayable growing</string>
    <string name="fair_value_acc">Fair Value Accounting</string>
    <string name="intro_depreciation_text">Depreciation</string>
    <string name="dep_truck">Depreciating the truck</string>
    <string name="dep_cash_flow">Depreciation in Cash Flow</string>
    <string name="amor_and_depreciation">Amortization and Depreciation</string>
    <string name="one_page_text">One Page</string>
    <string name="more_about_depreciation">Taking the example of a truck \nto see a strange income statement</string>
    <string name="more_info_abt_fair_value_acc">Difference between Historical Cost \nand Fair Value Accounting</string>
    <string name="more_info_about_dep_truck">Depreciating the truck spreads\nout the expense</string>
    <string name="more_info_abt_dep_cash_flow">Seeing depreciation in the cash flow</string>
    <string name="more_info_abt_amortization_and_depreciation">Comparing depreciation \nand amortization</string>
    <string name="more_info_abt_one_page">Blogger Trent Hamm summarizes \nhis views on personal finance in a \nsingle page</string>
    <string name="challenge_1">Challenge 1</string>
    <string name="sub_button_text">Submit</string>
    <string name="term_and_whole_life_ins">Term &amp; Whole Life Insurance</string>
    <string name="term_and_whole_pol">Term &amp; Whole Life Insurance Policies 1</string>
    <string name="term_and_whole_pol_2_text">Term &amp; Whole Life Insurance Policies 2</string>
    <string name="death_prob">Life Insurance &amp; Death Probability</string>
    <string name="money_lesson">6 Money Lessons</string>
    <string name="more_info_abt_challenge1">Tests your knowledge gained so far</string>
    <string name="more_info_abt_term_and_whole">The difference between term\nand whole life insurance</string>
    <string name="more_info_abt_term_and_whole_life_ins">Difference between the two policies</string>
    <string name="more_info_abt_term_and_whole_life_part2">What happens to the cash payout in whole\nlife policy if someone dies</string>
    <string name="more_info_abt_death_prob">Understanding an insurance \ncompany\'s point of view</string>
    <string name="more_info_abt_money_lessons">Leo Babauta describes 6 money \nlessons for his college aged daughter</string>
    <string name="time_value_money_text">Time Value of Money</string>
    <string name="intro_pres_val">Intro to Present Value</string>
    <string name="pres_value_2">Present Value 2</string>
    <string name="more_info_abt_pres_val_4">Changing the discount rates</string>
    <string name="pres_value_3">Present Value 3</string>
    <string name="pres_val_4">Present Value 4</string>
    <string name="lessons_money_kid">10 Money Lessons to Teach Kids</string>
    <string name="more_info_abt_time_val_money">Why when you get your money\nmatters</string>
    <string name="more_info_abt_intro_pres_val">A choice between money now\nor later</string>
    <string name="more_info_abt_val_2">More choices when to get your money</string>
    <string name="more_info_abt_pres_val_3">What happens when we change the\ndiscount rate</string>
    <string name="more_info_abt_10_money_lessons">Originally meant for parents,\ngood advice still by Leo Babauta</string>
    <string name="intro_inflation">Inflation Overview</string>
    <string name="what_inflation_text">What is Inflation ?</string>
    <string name="inflat_data">Inflation Data</string>
    <string name="cpi_index_text">CPI Index</string>
    <string name="intro_stocks_text">Buying a Company\'s stock</string>
    <string name="bonds_vs_stocks_text">Bonds vs. Stocks</string>
    <string name="more_info_abt_inflation_overview">Basic understanding of inflation</string>
    <string name="more_info_what_is_infl_text">The basics of price inflation</string>
    <string name="more_info_abt_infl_data">Studying inflation data</string>
    <string name="more_info_abt_cpi_index">Seeing CPI index</string>
    <string name="more_info_buy_company_stock_txt">What it means to buy a company\'s stock</string>
    <string name="more_info_abt_bonds_vs_stock">The difference between\na bond and a stock</string>
    <string name="intro_mutual_fund_txt">Open Ended Mutual Fund</string>
    <string name="oem_redemption_txt">Open-End Mutual Fund redemption</string>
    <string name="closed_mut_fund">Closed-End Mutual Fund</string>
    <string name="etfs_text">ETFs</string>
    <string name="challenge_2">Challenge 2</string>
    <string name="way_forward">The Way Forward</string>
    <string name="more_info_abt_open_ended_mut_f">Intro to Open-Ended Mutual Funds</string>
    <string name="more_info_abt_open_end_mut_fun">Understanding Open-Ended\nMutual Funds better</string>
    <string name="more_info_abt_closed_end_mutual_fund">Closed-End vs. Open-Ended\nMutual Funds</string>
    <string name="more_info_abt_etf">Exchange Traded Funds</string>
    <string name="more_info_about_challenge_2">Your last challenge</string>
    <string name="more_info_abt_way_forward">How to keep learning\nabout money</string>
</resources>